style: fixing color scheme and spacing

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -7,7 +7,7 @@
     @apply bg-stone-950;
   }
   h2 {
-    @apply text-4xl font-bold;
+    @apply text-3xl md:text-4xl font-bold leading-normal;
   }
 }
 
